fix avatar link overflow

--- a/Themes/Blackberry-Flat/organizr.css
+++ b/Themes/Blackberry-Flat/organizr.css
@@ -1883,7 +1883,6 @@
      margin: 0;
      border: 0;
      height: 36px;
-     min-width: 100px;
      font-size: 15px;
      font-weight: 600;
      line-height: 1.5;
